--- a/clase8/index.html
+++ b/clase8/index.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Pet Store</title>
 
+</head>
+<body>
+    <nav class="navbar navbar-light bg-green fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <h1><span>Pet</span> Shop</h1>
+          </a>
+          <a href="#">
+            <img src="imgs/cart.svg">
+          </a>
+        </div>
+      </nav>
+      <header class="header-store">
+      </header>
+      <main>
+          <div class="container">
+            
+            <div class="row pt-5 pb-5 border-green">
+              <div class="col-md-6 mb-5 text-center">
+                <a href="#" data-categoria="perro" onclick="seleccionarCategoria(this)">
+                  <img src="imgs/perro.png" alt="perro" class="perro"></a>
+              </div>
+              <div class="col-md-6 mb-5 text-center">
+                <a href="#" data-categoria="gato" onclick="seleccionarCategoria(this)">
+                  <img src="imgs/gato.png" alt="gato" class="gato"></a>
+            </div>
+          </div>
+
+
+              <div class="row pt-5">
+                  <div class="col-md-2">
+                      <div class="filtro">
+                        <h5 class="mb-3 bold">Categorias</h5>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="subcategoria" id="subcategoria1">
+                          <label class="form-check-label" for="subcategoria1">
+                           Alimentos
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="subcategoria" id="subcategoria2">
+                          <label class="form-check-label" for="subcategoria2">
+                            Accesorios
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="subcategoria" id="subcategoria3">
+                          <label class="form-check-label" for="subcategoria3">
+                           Juguetes
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="subcategoria" id="subcategoria4">
+                          <label class="form-check-label" for="subcategoria4">
+                           Cuchas y camas
+                          </label>
+                        </div>
+                        <button class="btn btn-compra btn-sm mt-3 mb-3">Aplicar</button>
+                      </div>
+                  </div>
+                  <div class="col-md-10 mb-5">
+                    <div class="row" id="productos-container">
+
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </main>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
