--- a/proyecto-final/checkout.html
+++ b/proyecto-final/checkout.html
@@ -22,7 +22,7 @@
         </div>
         <div class="modal-body text-center">
           ¡Muchas gracias por tu compra!<br>
-          Te enviamos el detalle de tu compra a tu mail.
+          Te enviamos el detalle de tu pedido a tu mail.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-submit" data-bs-dismiss="modal">Cerrar</button>
