--- a/proyecto-final/index.html
+++ b/proyecto-final/index.html
@@ -78,7 +78,7 @@
         <div class="container">
           <div class="row pt-5">
             <div class="col-md-2">
-              <div class="filtro" id="filtro">
+              <div class="filtro mb-5" id="filtro">
                 <h5 class="mb-3 bold">Categorias</h5>
                 <div id="subcategoria">
                   <div class="form-check">
